# ChangeLog for x11-proto/xf86vidmodeproto
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-proto/xf86vidmodeproto/ChangeLog,v 1.29 2009/09/19 14:44:20 remi Exp $

*xf86vidmodeproto-2.2.99.1 (19 Sep 2009)

  19 Sep 2009; Rémi Cardona <remi@gentoo.org>
  +xf86vidmodeproto-2.2.99.1.ebuild:
  bump to 2.2.99.1

  05 May 2009; Christian Faulhammer <fauli@gentoo.org>
  xf86vidmodeproto-2.2.2.ebuild:
  fix repoman warnings

  08 Sep 2007; Wulf C. Krueger <philantrop@gentoo.org>
  files/digest-xf86vidmodeproto-2.2.2, Manifest:
  Fixed manifest. cf. bug 191699.

  04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  xf86vidmodeproto-2.2.2.ebuild:
  Drop mirroring restriction.  Thanks to Zhang Le of bug #163088.

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> xf86vidmodeproto-2.2.2.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
  xf86vidmodeproto-2.2.2.ebuild:
  Mark 2.2.2 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  xf86vidmodeproto-2.2.2.ebuild:
  arm/sh stable

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  xf86vidmodeproto-2.2.2.ebuild:
  ppc/sparc/mips/alpha stable

  30 Jun 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-xf86vidmodeproto-2.2.2, Manifest:
  Fix digest.

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  xf86vidmodeproto-2.2.2.ebuild:
  Stable on amd64.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org>
  xf86vidmodeproto-2.2.2.ebuild:
  Stable on ppc64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  xf86vidmodeproto-2.2.2.ebuild:
  x86 stable.

  28 Apr 2006; Marien Zwart <marienz@gentoo.org> Manifest:
  Fixing SHA256 digest, pass four

  31 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  xf86vidmodeproto-2.2.2.ebuild:
  Add ~x86-fbsd keyword.

  24 Mar 2006; Donnie Berkholz <spyderous@gentoo.org>;
  xf86vidmodeproto-2.2.2.ebuild: