@@ -1,6 +1,6 @@
 DIST xf86vidmodeproto-2.2.2.tar.bz2 39615 RMD160 b940e671398e1e91cedd1a3ad66c3dcd6bdfeb8a SHA1 4a228958879eb06206d13f4f09ec902f837fb8dd SHA256 07152f990cc79ec5931989decc4a90b1919147e98ff6fcfe39507a9d3fc4d96e
-DIST xf86vidmodeproto-2.2.99.1.tar.bz2 50405 RMD160 94465f05e6399aac4c7cb85842686e422b881a67 SHA1 52e5bdaaaa3a8edfd4d783375270be53ecdd7a1a SHA256 7b4042dd55ac6629c515675c68c4bdc206cb1b62ab23073b3a4bf6d0ad18331e
+DIST xf86vidmodeproto-2.3.tar.bz2 84476 RMD160 303c6b35439bb1fd265f2a1627eb12f2be336d9e SHA1 22d034c2f66985f8541b9ea3421096ceaa006355 SHA256 8f704613a5407b31c594d05cf8e053f2b05777172a44e7cd2abd8090bd2ac247
 EBUILD xf86vidmodeproto-2.2.2.ebuild 555 RMD160 c3266510e9397d4a07f1b4fdaea3d41b2b3db024 SHA1 f3ebb016d3e7e4003e683f42b70185ca6d1f3842 SHA256 dc077e5e8e4b03e20b47bc638a2f169859b585ac5195d4e952d2dcdb469a4799
-EBUILD xf86vidmodeproto-2.2.99.1.ebuild 561 RMD160 dfad358794575e637f65ec2c4f7e344d2f8db601 SHA1 a35330dcad8f08d2f4898ff2efb6443b4d6d54c7 SHA256 bf4057e57eeb8c1bf2c400e7c9044472d8163dd19996da473575538d1c6e36c4
-MISC ChangeLog 3624 RMD160 64675cbf3772c0a10b63acfe87dd8991191a3065 SHA1 2b97be77cac1623b0e0a8ce7ea14afe0584a728a SHA256 4609b1a7bab7e3cf0390a93a3c165d36e810f9c1749e952fe530f74e36029237
+EBUILD xf86vidmodeproto-2.3.ebuild 471 RMD160 3a9179ec0fc06daf9129206737df3bd49eff201f SHA1 ac57cf278e6a1e740269906595beda1bc8e492af SHA256 10ff45983b6ba6f0d83e1f03562540f682d4c01d8ef96aefddfb47e2b601bf32
+MISC ChangeLog 3826 RMD160 f64eed2a001d924778f9fe95b7db717c2731b0b0 SHA1 6a66b7016d98d54195859cde469c7c2ffbbe0279 SHA256 017e0cb17b6758e9ac8857b904167e9ae5732cd3739b6649036cb34094e002e9
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
