@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/xf86vidmodeproto/xf86vidmodeproto-2.2.99.1.ebuild,v 1.1 2009/09/19 14:44:20 remi Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/xf86vidmodeproto/xf86vidmodeproto-2.3.ebuild,v 1.1 2009/10/02 15:14:18 scarabeus Exp $
 
 EAPI="2"
 
@@ -10,8 +10,3 @@ DESCRIPTION="X.Org XF86VidMode protocol headers"
 
 KEYWORDS="~ppc-aix ~x64-freebsd ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris ~x86-winnt"
 IUSE=""
-
-RDEPEND=""
-DEPEND="${RDEPEND}
->=x11-misc/util-macros-1.2
-!<x11-libs/libXxf86vm-1.0.99.1"
